--- a/Makefile.common
+++ b/Makefile.common
@@ -12,6 +12,7 @@ SOURCES_C := $(EMU_PATH)/libretro.c \
 		$(EMU_PATH)/memoryAccess.c \
       $(EMU_PATH)/hardwareRegisters.c \
       $(EMU_PATH)/sed1376.c \
+      $(EMU_PATH)/cpu32Opcodes.c \
 		$(EMU_PATH)/m68k/m68kops.c \
       $(EMU_PATH)/m68k/m68kopnz.c \
       $(EMU_PATH)/m68k/m68kopdm.c \
