Update libretro build system and separate it from emulator
In the future it will have a qt port that supports touchscreens on
android and iOS.

--- a/src/makefile.all
+++ b/src/makefile.all
@@ -1,14 +1,4 @@
-EMU_PATH := $(CORE_DIR)/src
-
-INCFLAGS := -I$(EMU_PATH)/libretro-common/include
-#-I$(NP2_PATH) \
-#-I$(NP2_PATH)/cbus
-
-#	-I$(NP2_PATH)/zlib \
-#	-I$(NP2_PATH)/i286c \
-
-SOURCES_C := $(EMU_PATH)/libretro.c \
-		$(EMU_PATH)/emulator.c \
+EMU_SOURCES := $(EMU_PATH)/emulator.c \
 		$(EMU_PATH)/memoryAccess.c \
       $(EMU_PATH)/hardwareRegisters.c \
       $(EMU_PATH)/sed1376.c \
@@ -19,5 +9,3 @@ SOURCES_C := $(EMU_PATH)/libretro.c \
       $(EMU_PATH)/m68k/m68kopac.c \
       $(EMU_PATH)/m68k/m68kdasm.c \
       $(EMU_PATH)/m68k/m68kcpu.c
-
-SOURCES_CXX :=
