Add ugui stuff for device tests

--- a/hwTestSuite/Makefile
+++ b/hwTestSuite/Makefile
@@ -1,22 +1,13 @@
-APPNAME = BootExtract
-ICONTEXT = "VZBootEX"
-APPID = Bdmp
+APPNAME = TstSuite
+ICONTEXT = "HWTests"
+APPID = TstS
 
-SRCS = bootloaderExtractor.c
+SRCS = testSuite.c ugui.c
 
-# Tool locations
-ifeq ($(PALM_OS_TOOLCHAIN),)
-$(error PALM_OS_TOOLCHAIN not defined)
-endif
-
-ifeq ($(PALM_OS_RESOURCE_TOOLS),)
-$(error PALM_OS_RESOURCE_TOOLS not defined)
-endif
-
-CC = $(PALM_OS_TOOLCHAIN)/m68k-palmos/gcc295/gcc/gcc-cross -palmos3.5
-BUILDPRC = $(PALM_OS_TOOLCHAIN)/tools/build-prc
-PILRC = $(PALM_OS_RESOURCE_TOOLS)/pilrc
-OBJRES = $(PALM_OS_TOOLCHAIN)/tools/obj-res
+CC = m68k-palmos-gcc -palmos3.5
+BUILDPRC = build-prc
+PILRC = pilrc
+OBJRES = m68k-palmos-obj-res
 
 # File names
 RESFILE = $(APPNAME).rcp
@@ -29,8 +20,6 @@ CSFLAGS = -O2 -S $(DEFINES) $(INCLUDES)
 CFLAGS = -O2 -g $(DEFINES) $(INCLUDES)
 
 # Makefile targets
-
-all: 
 
 .S.o:
 	$(CC) $(TARGETFLAGS) -c $<
