--- a/src/makefile.all
+++ b/src/makefile.all
@@ -2,6 +2,7 @@ EMU_SOURCES := $(EMU_PATH)/emulator.c \
       $(EMU_PATH)/memoryAccess.c \
       $(EMU_PATH)/hardwareRegisters.c \
       $(EMU_PATH)/sed1376.c \
+      $(EMU_PATH)/sdcard.c \
       $(EMU_PATH)/silkscreen.c \
       $(EMU_PATH)/cpu32Opcodes.c \
       $(EMU_PATH)/m68k/m68kops.c \
