--- a/src/makefile.all
+++ b/src/makefile.all
@@ -1,4 +1,4 @@
-EMU_SOURCES := $(EMU_PATH)/emulator.c \
+EMU_SOURCES_C := $(EMU_PATH)/emulator.c \
       $(EMU_PATH)/memoryAccess.c \
       $(EMU_PATH)/hardwareRegisters.c \
       $(EMU_PATH)/sed1376.c \
@@ -10,4 +10,6 @@ EMU_SOURCES := $(EMU_PATH)/emulator.c \
       $(EMU_PATH)/m68k/m68kopdm.c \
       $(EMU_PATH)/m68k/m68kopac.c \
       $(EMU_PATH)/m68k/m68kdasm.c \
-      $(EMU_PATH)/m68k/m68kcpu.c
+      $(EMU_PATH)/m68k/m68kcpu.c \
+      $(EMU_PATH)/bps/libbps.c \
+      $(EMU_PATH)/bps/crc32.c
