--- a/src/makefile.all
+++ b/src/makefile.all
@@ -2,6 +2,7 @@ EMU_SOURCES_C := $(EMU_PATH)/emulator.c \
       $(EMU_PATH)/memoryAccess.c \
       $(EMU_PATH)/hardwareRegisters.c \
       $(EMU_PATH)/sed1376.c \
+      $(EMU_PATH)/ads7846.c \
       $(EMU_PATH)/sdcard.c \
       $(EMU_PATH)/silkscreen.c \
       $(EMU_PATH)/68328Functions.c \
