--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /hwTestSuite/*.grc
 /hwTestSuite/*.prc
 /hwTestSuite/TstSuite
+/hwTestSuite/TstSuite-sections.s
+/hwTestSuite/TstSuite-sections.ld
 /libretroBuildSystem/obj
 /libretroBuildSystem/libs
 /qtBuildSystem/build-Mu-*
