Add buffer graph viewer and fix some style nits
The analog resistance values per pixel can now be seen.
The raw RGB16 display mode does have an issue when transitioning from red to green and green to blue where the pixel is almost black though.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /libretroBuildSystem/libs
 /qtBuildSystem/build-Mu-*
 /localTester/build-LocalTester-*
+/tools/build-BufferGraphViewer-*
 /localTester/3dsIrForwarder/build
 /localTester/3dsIrForwarder/3dsIrForwarder.elf
 /localTester/3dsIrForwarder/3dsIrForwarder.3dsx
