--- a/src/makefile.all
+++ b/src/makefile.all
@@ -6,7 +6,6 @@ EMU_SOURCES_C := $(EMU_PATH)/emulator.c \
       $(EMU_PATH)/sdcard.c \
       $(EMU_PATH)/silkscreen.c \
       $(EMU_PATH)/68328Functions.c \
-      $(EMU_PATH)/trapNumToName.c \
       $(EMU_PATH)/m68k/m68kops.c \
       $(EMU_PATH)/m68k/m68kopnz.c \
       $(EMU_PATH)/m68k/m68kopdm.c \
@@ -14,4 +13,5 @@ EMU_SOURCES_C := $(EMU_PATH)/emulator.c \
       $(EMU_PATH)/m68k/m68kdasm.c \
       $(EMU_PATH)/m68k/m68kcpu.c \
       $(EMU_PATH)/bps/libbps.c \
-      $(EMU_PATH)/bps/crc32.c
+      $(EMU_PATH)/bps/crc32.c \
+      $(EMU_PATH)/debug/sandbox.c
