--- a/src/makefile.all
+++ b/src/makefile.all
@@ -3,6 +3,7 @@ EMU_SOURCES_C := $(EMU_PATH)/emulator.c \
       $(EMU_PATH)/hardwareRegisters.c \
       $(EMU_PATH)/sed1376.c \
       $(EMU_PATH)/ads7846.c \
+      $(EMU_PATH)/pdiUsbD12.c \
       $(EMU_PATH)/sdCard.c \
       $(EMU_PATH)/silkscreen.c \
       $(EMU_PATH)/m68328.c \
