Refactor everything, add begining of hardware expansion driver

--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,14 @@
 *.so
 *.dylib
 *.pro.user
-/hwTestSuite/*.bin
-/hwTestSuite/*.grc
-/hwTestSuite/*.prc
-/hwTestSuite/TstSuite
-/hwTestSuite/TstSuite-sections.s
-/hwTestSuite/TstSuite-sections.ld
 /libretroBuildSystem/obj
 /libretroBuildSystem/libs
 /qtBuildSystem/build-Mu-*
-/tools/build-BufferGraphViewer-*
-/tools/build-MakePalmIcon-*
+/tools/palm/hwTestSuite/*.bin
+/tools/palm/hwTestSuite/*.grc
+/tools/palm/hwTestSuite/*.prc
+/tools/palm/hwTestSuite/TstSuite
+/tools/palm/hwTestSuite/TstSuite-sections.s
+/tools/palm/hwTestSuite/TstSuite-sections.ld
+/tools/desktop/build-BufferGraphViewer-*
+/tools/desktop/build-MakePalmIcon-*
